# xbrzscale

./: .gitignore  CLAUDE.md  CMakeLists.txt  EXAMPLES.md  README.md  test-path.lua  test-xbrz.lua  xbrz_c_api.cpp
.github/workflows/: README.md  build.yml  generate-examples.yml  package-aseprite-plugin.yml
aseprite-plugin/: .gitignore  README.md  package.json  xbrz-filter.lua
docs/plans/: 2026-02-05-python-implementation-design.md
python/: README.md  pyproject.toml
python/xbrzscale/: __init__.py  __main__.py  library.py  wrapper.py
